[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sekha-proxy"
version = "0.1.0"
description = "Intelligent LLM routing proxy with automatic context injection for Sekha AI memory"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Sekha AI", email = "dev@sekha-ai.dev"},
]
maintainers = [
    {name = "Sekha AI", email = "dev@sekha-ai.dev"},
]
keywords = ["ai", "llm", "proxy", "memory", "context", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.2",
    "mypy>=1.13.0",
    "black>=25.1.0",
]

[project.urls]
Homepage = "https://sekha.dev"
Documentation = "https://docs.sekha.dev"
Repository = "https://github.com/sekha-ai/sekha-proxy"
Issues = "https://github.com/sekha-ai/sekha-proxy/issues"
Changelog = "https://github.com/sekha-ai/sekha-proxy/blob/main/CHANGELOG.md"

[project.scripts]
sekha-proxy = "proxy:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short --cov=. --cov-report=term-missing"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true